Center piano and computer keyboard Fix issue with guitar overflow

--- a/src/modules/Guitar/Guitar.less
+++ b/src/modules/Guitar/Guitar.less
@@ -17,21 +17,21 @@
     position: absolute;
     left: 230px;
     top: 71px;
-    width: 100%;
+    width: 430px;
   }
 
   .fretDots6 {
     position: absolute;
     left: 230px;
     top: 111px;
-    width: 100%;
+    width: 430px;
   }
 
   .fretDots7 {
     position: absolute;
     left: 230px;
     top: 131px;
-    width: 100%;
+    width: 430px;
   }
 
   .fretDot {
