--- a/src/modules/Piano/Piano.less
+++ b/src/modules/Piano/Piano.less
@@ -9,6 +9,8 @@
 .piano {
 	display: grid;
 	grid-template-columns: repeat(3, 420px);
+	width: fit-content;
+	margin: auto;
 }
 
 .octave {
